test/negative/FormalInitializer.java
public class FormalInitializer {
    public FormalInitializer(int x = 7) {
    }
}
